@@ -24,7 +24,6 @@ from decimal import *
 import logging
 from datetime import timedelta
 
-import six
 from aenum import Enum
 from isodate import parse_duration, duration_isoformat
 
@@ -135,8 +134,7 @@ class GraphSONReader(object):
             return obj
 
 
-@six.add_metaclass(GraphSONTypeType)
-class _GraphSONTypeIO(object):
+class _GraphSONTypeIO(object, metaclass=GraphSONTypeType):
     python_type = None
     graphson_type = None
 
